# scan

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  conventions.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_no_mpi.txt  setup.py  tox-conda.ini  tox.ini
docs/: code.rst  conf.py  examples.rst  faq.md  for_contributors.md  index.rst  installation.md  scan_data_processing.rst  scan_esn.rst  scan_file_handling.rst  scan_measures.rst  scan_mpi.rst  scan_simulations.rst  scan_utilities.rst
docs/examples/: higher_dim_example.nblink  minimal_example.nblink  training_and_prediction_example.nblink
examples/: higher_dim_example.ipynb  minimal_example.ipynb  ngrc_prediction_and_inference.ipynb  training_and_prediction_example.ipynb
scan/: __init__.py  _version.py  data_processing.py  esn.py  file_handling.py  locality_measures.py  logging.py  measures.py  mpi.py  ngrc.py  simulations.py  testing.py  utilities.py
scan/simulations/: simulations.py
tests/: test_base.py  test_data_processing.py  test_esn.py  test_file_handling.py  test_import.py  test_locality_measures.py  test_logging.py  test_measures.py  test_mpi.py  test_ngrc.py  test_simulations.py  test_utilities.py
tox_requirements/: requirements_cutting_edge.txt  requirements_newest_supported.txt  requirements_oldest_supported_py310.txt  requirements_oldest_supported_py36.txt  requirements_oldest_supported_py37.txt  requirements_oldest_supported_py38.txt  requirements_oldest_supported_py39.txt
