# -*- coding: utf-8 -*-
# Configuration file for additional tools not covered in setup.py or any of the .ini files.
# NOTE: Ostensibly, mypy settings should be able to use pyproject.toml too, but I couldn't get it to work without
#  compromises as mypy just didn't seem to read this file correctly. Not sure why.

[build-system]
# This is mostly legacy pyproject.toml config and should probably be replaced by something up to date at some point
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "numpy>=1.14.5",
    "networkx>=2.6.0",
    "pandas>=1.0.0",
    "scipy>=1.4.0",
    "scikit-learn>=0.20.0",
    "loguru>=0.4.0",
]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120
target-version = ['py38'] # py39, p310 is not yet supported. See https://github.com/grantjenks/blue/pull/54
preview = true # This is mostly used for black's string formatting feature, but may make other formatting nicer too


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "-v"

